<resources>
    <string name="app_name">Sparkling</string>
    <string name="title_scan">Scan</string>
    <string name="title_overview">Overview</string>
    <string name="title_settings">Settings</string>
    <string name="login_banner">Login to your account</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="signup_now">Signup now</string>
    <string name="login">Login</string>
    <string name="create_a_new_account">Register with us to start your easy laundry journey</string>
    <string name="sync_across_devices_with_your_account">find your information anywhere you login
</string>
    <string name="last_name">Last Name</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_user">Already a user?</string>
    <string name="login_now">Login now</string>
    <string name="first_name">First Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="term_of_use">Term of use</string>
    <string name="save">save</string>
    <string name="choose_your_washroom">Choose your laundry room</string>
    <string name="last_name_preference">LastName</string>
    <string name="first_name_preference">FirstName</string>
    <string name="logout">Log Out</string>
    <string name="scan_to_open">Scan to open</string>

    <string name="term">
        1. Provide accurate personal information during registration and keep the information current.
        We can suspend or terminate your account if you provide incomplete or false information.
        \n\nYou are responsible for all activity on your account. \n\n

        2. We can make updates to our terms of service at any time, and we’ll notify you of these updates as appropriate.
        By continuing to use our services after these updates, you agree to the revised terms.
        \n\nYou also agree to receive notices from us electronically. \n\n

        3. If you want to use our services, you can’t do certain bad things.
        If we think you are doing these bad things, we have the right to share your information with law enforcement.
    </string>
    <string name="reminder">——Reminder——</string>
    <string name="scan_reminder">1. To start using the machine, tap \'Open\' to scan QR code\n2. To retrieve your cloths, tap \'Close\' to scan QR code again\n3. There is a pickup interval after the machine finishes your laundry. If your pickup time exceeds the max limit, you will be penalized by limiting the usage of this app</string>
    <string name="account">Account</string>
    <string name="reserve">Reserve</string>
    <string name="number">Number</string>
    <string name="washer">Washer</string>
    <string name="washer_sn">washer SN</string>
    <string name="available">Available</string>
    <string name="todo">TODO</string>
    <string name="reminder">——Reminder——</string>
    <string name="scan_reminder">1. To start using the machine, tap \'Open\' to scan QR code\n2. To retrieve your cloths, tap \'Close\' to scan QR code again\n3. There is a pickup interval after the machine finishes your laundry. If your pickup time exceeds the max limit, you will be penalized by limiting the usage of this app</string>
    <string name="account">Account</string>
</resources>