<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_overview">

    <fragment
        android:id="@+id/navigation_overview"
        android:name="com.laioffer.lma.ui.overview.OverviewFragment"
        android:label="@string/title_overview"
        tools:layout="@layout/fragment_overview" />

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.laioffer.lma.ui.scan.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.laioffer.lma.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>