<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_main"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_banner"
                    android:textSize="19.2sp"
                    android:textColor="@color/colorPrimaryDark"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_back"
                    android:textSize="17.3sp"
                    android:layout_marginTop="4dp"
                    android:textColor="#6e7f8d"/>
            </LinearLayout>


        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/StyledTilEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="28.7dp"
            android:layout_marginRight="28.7dp"
            android:textColor="@color/colorPrimaryDark">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:textAllCaps="false"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingTop="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/StyledTilEditText"
            android:layout_marginLeft="28.7dp"
            android:layout_marginRight="28.7dp"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingTop="10dp"
                android:textColor="@color/colorPrimaryDark"

                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_below="@id/login_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/primary_rect"
        android:textColor="@color/colorBackground"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:layout_marginTop="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/login"/>


</RelativeLayout>
